<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidWidgetSample</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="widget_static">Static Text</string>
    <string name="gpson">GPS On</string>
    <string name="gpsoff">GPS OFF</string>
    <string name="widget_setting_button">Edit Setting</string>
    <string name="saveSettings">Save Settings</string>
	<string name="settingsHeading">Settings</string>
	<string name="receiverLabel">Receiver Name</string>
	<string name="receiverHint">Enter Receiver Name </string>
	<string name="receiverNumberLabel">Receiver Number</string>
	<string name="receiverNumberHint">Enter Mobile Number </string>
	<string name="receiverEmailLabel">Receiver Email </string>
	<string name="receiverEmailHint">Enter Email Address </string>
	<string name="app_activate">Activate</string>
	<string name="app_deactivate">Deactivate</string>
	<string name="app_activate_status">Deactivate</string>
	<string name="receivertimeIntervalLabel">Time Interval</string>
	<string name="receivertimeIntervalHint">Enter in seconds</string>
	<string name="receiverrelationLabel">Relation</string>
	<string name="relationHint">Enter relation with receiver</string>
	<string name="SMSContent">Hi receiver_name, your relation_name is in following address current_address</string>
	<string name="SMSContentAddressNotFound">Hi receiver_name, Unable to get your relation_name current location. No location available where your relation_name are.</string>
	<string name="SMSContentLatLong">Hi receiver_name, Unable to get relation_name current address. But you can identified it by geocode latitude = current_latitude and longitude = current_longitude.</string>
	<string name="senderLabel">Device user name</string>
	<string name="senderHint">Enter device user name</string>
	<string name="mailSubject">Your Friend device_username current location</string>
	<string name="mailSenderAddress">vishal.ids1@gmail.com</string>
	<string name="mailSenderPassword">login@123</string>
</resources>